--- a/Pages/informacion.html
+++ b/Pages/informacion.html
@@ -69,11 +69,11 @@
                   </nav>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 ">
-                    <h1 class="text-center mt-5 mb-5 fontSize">Informacion</h1>
-            </div>
-        </div>
+        <div class="row mt-5 mb-5">
+          <div class="col-lg-12 col-12 imgTitulo mt-5 mb-5 p-5 ">
+                  <h1 class="text-center mt-5 mb-5 p-5 text-light fontSize ">Informacion</h1>
+          </div>
+      </div>
 
 
 
