--- a/Pages/platos.html
+++ b/Pages/platos.html
@@ -10,9 +10,8 @@
     <title>Platos</title>
 </head>
 <body>
-    
     <div class="container-fluid">
-
+        <header>
         <div class="row"> 
             <div  class="col-lg-12  col-12">
         
@@ -69,14 +68,109 @@
                   </nav>
             </div>
         </div>
+      </header>
+    <main>
         <div class="row mt-5 mb-5">
           <div class="col-lg-12 col-12 imgTitulo mt-5 mb-5 p-5 ">
                   <h1 class="text-center mt-5 mb-5 p-5 text-light fontSize ">Platos</h1>
           </div>
-      </div>
+        </div>
+        <div class=" row mb-5">
+          <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Alta Cocina</h3></div>
+        </div>
+        <div class="row ">
+          <div class="col-12 col-lg-12 d-flex justify-content-between" >
+            <div class="card" style="width: 22rem;">
+              <img src="../img/01 Costillas-de-cerdo-al-caramelo-880x587.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">COSTILLAS DE CERDO GLASEADAS CON MIEL</p>
+              </div>
+            </div>
+            <div class="card" style="width: 22rem;">
+              <img src="../img/02 Dorada al horno con papas y limón.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">DORADO A LA SAL CON PAPAS Y LIMON</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem;">
+              <img src="../img/03 SALOMN AL HORNO CON BONIATO.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">SALMÓN CON BONIATO Y PAPAS ASADAS</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem;">
+              <img src="../img/04 BIFE DE CHORIZO CON SALSA DE ZANAHORIA.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">BIFE DE CHORIZO CON SALSA DE ZANAHORIA</p>
+              </div>
+            </div>
+          </div>
+        </div>
+         <div class=" row mt-5 mb-5 ">
+          <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Cocina Tradicional</h3></div>
+        </div>
+        <div class="row ">
+          <div class="col-12 col-lg-12 d-flex justify-content-between " >
+            <div class="card " style="width: 22rem;">
+              <img src="../img/09 Tradicional ESPAÑA Pulpo a la Gallega.jpg" class="card-img-top " alt="...">
+              <div class="card-body">
+                <p class="card-text">ESPAÑA: PULPO A LA GALLEGA</p>
+              </div>
+            </div>
+            <div class="card" style="width: 22rem; ">
+              <img src="../img/10Tradicional Rusa Pilmeni.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">RUSIA: PILMENI</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem;">
+              <img src="../img/11  Tradicional Dolma Turquia.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">TURQUIA: DOLMA</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem;">
+              <img src="../img/12 tradicionlan Japon Ramen.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">JAPON: RAMEN</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class=" row mt-5 mb-5 ">
+          <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Postres</h3></div>
+        </div>
+        <div class="row ">
+          <div class="col-12 col-lg-12 d-flex justify-content-between " >
+            <div class="card " style="width: 22rem;">
+              <img src="../img/05 coulant-de-chocolate-frio.jpg" class="card-img-top " alt="...">
+              <div class="card-body">
+                <p class="card-text">COULANT DE CHOCOLATE FRÍO</p>
+              </div>
+            </div>
+            <div class="card" style="width: 22rem;">
+              <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">CHEESECAKE COCIDO</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem; ">
+              <img src="../img/07  Lemon Pie.webp" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">LEMON PIE</p>
+              </div>
+            </div>
+             <div class="card" style="width: 22rem;">
+              <img src="../img/08 FLAN DE VEINTE YEMAS.jpg " class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">FLAN DE VEINTE YEMAS</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
-
+        </main>
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5  bg-white bg-gradient">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
