dando estlo a Mobile

--- a/Pages/platos.html
+++ b/Pages/platos.html
@@ -16,11 +16,11 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                    <div class="container-fluid   bg-dark bg-gradient p-1  justify-content-end">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
-                        <div class="collapse navbar-collapse h5 ms-lg-4 " id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse h5 ms-lg-12 " id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-1 ">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
@@ -79,26 +79,26 @@
           <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Alta Cocina</h3></div>
         </div>
         <div class="row ">
-          <div class="col-12 col-lg-12 d-flex justify-content-between" >
-            <div class="card" style="width: 22rem;">
+          <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
+            <div class="card mb-2" style="width: 22rem;">
               <img src="../img/01 Costillas-de-cerdo-al-caramelo-880x587.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">COSTILLAS DE CERDO GLASEADAS CON MIEL</p>
               </div>
             </div>
-            <div class="card" style="width: 22rem;">
+            <div class="card mb-2" style="width: 22rem;">
               <img src="../img/02 Dorada al horno con papas y limón.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">DORADO A LA SAL CON PAPAS Y LIMON</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem;">
+             <div class="card mb-2" style="width: 22rem;">
               <img src="../img/03 SALOMN AL HORNO CON BONIATO.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">SALMÓN CON BONIATO Y PAPAS ASADAS</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem;">
+             <div class="card mb-2" style="width: 22rem;">
               <img src="../img/04 BIFE DE CHORIZO CON SALSA DE ZANAHORIA.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">BIFE DE CHORIZO CON SALSA DE ZANAHORIA</p>
@@ -107,29 +107,29 @@
           </div>
         </div>
          <div class=" row mt-5 mb-5 ">
-          <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Cocina Tradicional</h3></div>
+          <div class="col-12 col-lg-12 d-flex justify-content-center  "><h3>Cocina Tradicional</h3></div>
         </div>
         <div class="row ">
-          <div class="col-12 col-lg-12 d-flex justify-content-between " >
-            <div class="card " style="width: 22rem;">
+          <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
+            <div class="card mb-2" style="width: 22rem;">
               <img src="../img/09 Tradicional ESPAÑA Pulpo a la Gallega.jpg" class="card-img-top " alt="...">
               <div class="card-body">
                 <p class="card-text">ESPAÑA: PULPO A LA GALLEGA</p>
               </div>
             </div>
-            <div class="card" style="width: 22rem; ">
+            <div class="card mb-2" style="width: 22rem; ">
               <img src="../img/10Tradicional Rusa Pilmeni.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">RUSIA: PILMENI</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem;">
+             <div class="card mb-2" style="width: 22rem;">
               <img src="../img/11  Tradicional Dolma Turquia.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">TURQUIA: DOLMA</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem;">
+             <div class="card mb-2" style="width: 22rem;">
               <img src="../img/12 tradicionlan Japon Ramen.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">JAPON: RAMEN</p>
@@ -141,26 +141,26 @@
           <div class="col-12 col-lg-12 d-flex justify-content-center"><h3>Postres</h3></div>
         </div>
         <div class="row ">
-          <div class="col-12 col-lg-12 d-flex justify-content-between " >
-            <div class="card " style="width: 22rem;">
+          <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
+            <div class="card mb-2" style="width: 22rem;">
               <img src="../img/05 coulant-de-chocolate-frio.jpg" class="card-img-top " alt="...">
               <div class="card-body">
                 <p class="card-text">COULANT DE CHOCOLATE FRÍO</p>
               </div>
             </div>
-            <div class="card" style="width: 22rem;">
+            <div class="card mb-2" style="width: 22rem;">
               <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">CHEESECAKE COCIDO</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem; ">
+             <div class="card mb-2" style="width: 22rem; ">
               <img src="../img/07  Lemon Pie.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">LEMON PIE</p>
               </div>
             </div>
-             <div class="card" style="width: 22rem;">
+             <div class="card mb-2" style="width: 22rem;">
               <img src="../img/08 FLAN DE VEINTE YEMAS.jpg " class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">FLAN DE VEINTE YEMAS</p>
