--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -16,7 +16,7 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                    <div class="container-fluid   bg-dark bg-gradient p-1 justify-content-end">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -136,7 +136,7 @@
       </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-12 d-flex justify-content-center mt-5 mb-4">
+        <div class="col-12 col-lg-12 d-flex justify-content-center mt-5 mb-4 flex-wrap">
           <img src="../img/imagenparaContactoss.png" style="width: 50%; padding:1rem;" alt="">
           <img src="../img/foncocontactos2.jpg" style="width: 50%;padding:1rem;" alt="">
           </div>
