--- a/Pages/informacion.html
+++ b/Pages/informacion.html
@@ -17,7 +17,7 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                    <div class="container-fluid   bg-dark bg-gradient p-1  justify-content-end">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -73,7 +73,7 @@
         <main>
             <div class="row mt-5 mb-5">
               <div class="col-lg-12 col-12 imgTitulo mt-5 mb-5 p-5 ">
-                      <h1 class="text-center mt-5 mb-5 p-5 text-light fontSize ">Informacion</h1>
+                      <h1 class="text-center mt-5  text-light fontSize ">Informacion</h1>
               </div>
             </div>
             <div class="row">
