--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row"> 
             <div  class="col-lg-12  col-12">
               <nav class="navbar navbar-expand-lg navbar-light  " >
-                  <div class="container-fluid  bg-dark bg-gradient p-1 ">
+                  <div class="container-fluid  bg-dark bg-gradient p-1 justify-content-end text-white">
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -82,11 +82,11 @@
         <div class="row justify-content-center ">
 
           <div class="col-lg-5 col-12 justify-content-center me-4">
-            <h2 class="mb-5 mt-5 text-start fw-bold">¿Que es la Cocina de Autor?</h4>
-            <p class="fs-4 mt-5 fst-italic ">  La cocina de autor se refiere a la cocina innovadora que se basa en la experiencia del propio chef, es decir,
+            <h2 class="mb-5 mt-2 text-start fw-bold text-center">¿Que es la Cocina de Autor?</h4>
+            <p class="fs-5 mt-5 fst-italic parrafoIndex text-center">  La cocina de autor se refiere a la cocina innovadora que se basa en la experiencia del propio chef, es decir,
                la comida de autor tiene un estilo único y personal sin tener en cuenta las técnicas culinarias habituales.
               </p>
-              <p class="fs-4 mt-1 fst-italic ">
+              <p class="fs-5 mt-1 fst-italic parrafoIndex  text-center">
                 Los platos de autor que crean estos chefs son el resultado de una serie de técnicas, productos y utensilios que hacen la función de dar un toque personal y creativo.
               </p>
           </div>
@@ -129,7 +129,7 @@
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
               </a>
-              <span class="text-muted">© 2022 Company, Inc</span>
+              <span class="text-muted text-align-center">© 2022 Company, Inc</span>
             </div>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
