--- a/Pages/informacion.html
+++ b/Pages/informacion.html
@@ -17,12 +17,13 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  justify-content-end">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                      <button class="navbar-toggler coloMenu ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
+                      <img src="../img/logoCocinaNuevoo.png"  class = " logoVisibleMobile rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
                         <div class="collapse navbar-collapse h5 ms-lg-4 " id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-1 ">
+                            <ul class="navbar-nav me-auto mb-1 menuMobile">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
                             </li>
@@ -63,7 +64,10 @@
                                 </ul>
                             </li>
                             </ul>
-                            <img src="../img/logoCocinaNuevoo.png"  class = " rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                            <div class=" imgMenuMobile">
+
+                              <img src="../img/logoCocinaNuevoo.png"  class = "  rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                          </div>
                       </div>
                     </div>
                   </nav>
@@ -168,7 +172,12 @@
                   </div>
                   <div class="card-body">
                     <h5 class="card-title">Algunos restaurantes que realizan Cocina de Autor en Argentina</h5>
-                    <p class="card-text">algunos baress</p>
+                    <ul class="textoParrafo algunosBares">
+                      <li>http://www.cocinaclub.somee.com/</li>
+                      <li>http://berto.com.ar/</li>
+                      <li>http://www.kalmaresto.com.ar/</li>
+                      <li>https://4taparedresto.com.ar/cocina-autor-buenos-aires-4ta-pared-pablo-cerne/</li>
+                  </ul>
                   </div>
                   <div class="card-footer text-muted p-3">
                   </div>
@@ -177,7 +186,7 @@
             </div>
 
       </main>
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
+        <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
