--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -16,12 +16,13 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1 justify-content-end">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="container-fluid   bg-dark bg-gradient p-1 ">
+                      <button class="navbar-toggler coloMenu ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                      </button>
-                        <div class="collapse navbar-collapse h5 ms-lg-4 " id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-1 ">
+                    </button>
+                    <img src="../img/logoCocinaNuevoo.png"  class = " logoVisibleMobile rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                        <div class="collapse navbar-collapse h5 ms-lg-4  justify-content-center " id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-1 menuMobile ">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
                             </li>
@@ -62,7 +63,10 @@
                                 </ul>
                             </li>
                             </ul>
-                            <img src="../img/logoCocinaNuevoo.png"  class = " rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                            <div class=" imgMenuMobile">
+
+                                <img src="../img/logoCocinaNuevoo.png"  class = "  rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                            </div>
                       </div>
                     </div>
                   </nav>
@@ -137,12 +141,12 @@
       </div>
       <div class="row">
         <div class="col-12 col-lg-12 d-flex justify-content-center mt-5 mb-4 flex-wrap">
-          <img src="../img/imagenparaContactoss.png" style="width: 50%; padding:1rem;" alt="">
-          <img src="../img/foncocontactos2.jpg" style="width: 50%;padding:1rem;" alt="">
+          <img src="../img/imagenparaContactoss.png" class="imgContacto"  alt="">
+          <img src="../img/foncocontactos2.jpg" class="imgContacto"  alt="">
           </div>
       </div>
       </main>
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
+        <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
