--- a/Pages/cursos.html
+++ b/Pages/cursos.html
@@ -17,12 +17,13 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  justify-content-end">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                      <button class="navbar-toggler coloMenu ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
+                      <img src="../img/logoCocinaNuevoo.png"  class = " logoVisibleMobile rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
                         <div class="collapse navbar-collapse h5 ms-lg-4 " id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-1 ">
+                            <ul class="navbar-nav me-auto mb-1 menuMobile ">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
                             </li>
@@ -65,7 +66,10 @@
                                 </ul>
                             </li>
                             </ul>
-                            <img src="../img/logoCocinaNuevoo.png"  class = " rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                            <div class=" imgMenuMobile">
+
+                              <img src="../img/logoCocinaNuevoo.png"  class = "  rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                          </div>
                       </div>
                     </div>
                   </nav>
@@ -140,7 +144,7 @@
 
           <div class="row">
             <div class="col-12 col-lg-12 mt-4  d-flex justify-content-around flex-wrap">
-              <div class="card mb-3" style="max-width: 350px;">
+              <div class="card mb-3 cartaOtrosCursos" >
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/curso 4 mexic.webp" class="img-fluid rounded-start" alt="...">
@@ -160,7 +164,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 350px;">
+              <div class="card mb-3 cartaOtrosCursos" >
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/curso pastas 5.5.2.jpg" class="img-fluid rounded-start" alt="...">
@@ -186,7 +190,7 @@
 
           <div class="row">
             <div class="col-12 col-lg-12 mt-4  d-flex justify-content-around flex-wrap">
-              <div class="card mb-3" style="max-width:350px;">
+              <div class="card mb-3 cartaOtrosCursos" >
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/curso 6 comida-japonesa.webp" class="img-fluid rounded-start" alt="...">
@@ -206,7 +210,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 350px;">
+              <div class="card mb-3 cartaOtrosCursos" >
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/curso 7 postres.webp" class="img-fluid rounded-start" alt="...">
@@ -231,7 +235,7 @@
           </div>
         
       </main>
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
+        <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
