--- a/Pages/platos.html
+++ b/Pages/platos.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    <meta name="description" content="Una nueva forma de explorar, pensar y disfrutar el mundo de la gastronomia, la Cocina de Autor ">
+    <meta name="keywords" content="Cocina de Autor, Platos, Cursos, Que es, Informacion, Comida, Alta Cocina, Cocina Tradicional, Postres">
+    <link rel="icon" type="Logo-Cocina-de-Autor" href="../img/logoCocinaNuevoo.png"/> 
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Platos</title>
@@ -16,12 +19,13 @@
             <div  class="col-lg-12  col-12">
         
                 <nav class="navbar navbar-expand-lg navbar-light  " >
-                    <div class="container-fluid   bg-dark bg-gradient p-1  justify-content-end">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="container-fluid   bg-dark bg-gradient p-1  ">
+                      <button class="navbar-toggler coloMenu ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
+                      <img src="../img/logoCocinaNuevoo.png"  class = " logoVisibleMobile rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
                         <div class="collapse navbar-collapse h5 ms-lg-12 " id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-1 ">
+                            <ul class="navbar-nav me-auto mb-1 menuMobile">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="../index.html">Inicio</a>
                             </li>
@@ -62,7 +66,10 @@
                                 </ul>
                             </li>
                             </ul>
-                            <img src="../img/logoCocinaNuevoo.png"  class = " rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                            <div class=" imgMenuMobile">
+
+                              <img src="../img/logoCocinaNuevoo.png"  class = "  rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                          </div>
                       </div>
                     </div>
                   </nav>
@@ -80,25 +87,25 @@
         </div>
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
-            <div class="card mb-2" style="width: 22rem;">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/01 Costillas-de-cerdo-al-caramelo-880x587.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">COSTILLAS DE CERDO GLASEADAS CON MIEL</p>
               </div>
             </div>
-            <div class="card mb-2" style="width: 22rem;">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/02 Dorada al horno con papas y limón.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">DORADO A LA SAL CON PAPAS Y LIMON</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem;">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/03 SALOMN AL HORNO CON BONIATO.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">SALMÓN CON BONIATO Y PAPAS ASADAS</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem;">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/04 BIFE DE CHORIZO CON SALSA DE ZANAHORIA.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">BIFE DE CHORIZO CON SALSA DE ZANAHORIA</p>
@@ -111,25 +118,25 @@
         </div>
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
-            <div class="card mb-2" style="width: 22rem;">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/09 Tradicional ESPAÑA Pulpo a la Gallega.jpg" class="card-img-top " alt="...">
               <div class="card-body">
                 <p class="card-text">ESPAÑA: PULPO A LA GALLEGA</p>
               </div>
             </div>
-            <div class="card mb-2" style="width: 22rem; ">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem; ">
               <img src="../img/10Tradicional Rusa Pilmeni.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">RUSIA: PILMENI</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem;">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/11  Tradicional Dolma Turquia.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">TURQUIA: DOLMA</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem;">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/12 tradicionlan Japon Ramen.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">JAPON: RAMEN</p>
@@ -142,25 +149,25 @@
         </div>
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
-            <div class="card mb-2" style="width: 22rem;">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/05 coulant-de-chocolate-frio.jpg" class="card-img-top " alt="...">
               <div class="card-body">
                 <p class="card-text">COULANT DE CHOCOLATE FRÍO</p>
               </div>
             </div>
-            <div class="card mb-2" style="width: 22rem;">
-              <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top" alt="...">
+            <div class="card mb-2 imagenPlatos" style="width: 22rem;">
+              <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top " alt="...">
               <div class="card-body">
                 <p class="card-text">CHEESECAKE COCIDO</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem; ">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem; ">
               <img src="../img/07  Lemon Pie.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">LEMON PIE</p>
               </div>
             </div>
-             <div class="card mb-2" style="width: 22rem;">
+             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
               <img src="../img/08 FLAN DE VEINTE YEMAS.jpg " class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">FLAN DE VEINTE YEMAS</p>
@@ -171,7 +178,7 @@
 
 
         </main>
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
+        <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1 ">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
