--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Una nueva forma de explorar, pensar y disfrutar el mundo de la gastronomia, la Cocina de Autor ">
+    <meta name="keywords" content="Cocina de Autor, Platos, Cursos, Que es, Informacion, Comida, Alta Cocina, Cocina Tradicional, Postres">
+    <link rel="icon" type="Logo-Cocina-de-Autor" href="./img/logoCocinaNuevoo.png"/> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -16,12 +19,13 @@
         <div class="row"> 
             <div  class="col-lg-12  col-12">
               <nav class="navbar navbar-expand-lg navbar-light  " >
-                  <div class="container-fluid  bg-dark bg-gradient p-1 justify-content-end text-white">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                  <div class="container-fluid  bg-dark bg-gradient p-1  text-white">
+                      <button class="navbar-toggler coloMenu ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon "></span>
                       </button>
+                      <img src="./img/logoCocinaNuevoo.png"  class = " logoVisibleMobile rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
                         <div class="collapse navbar-collapse h5 ms-lg-4 " id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-1 ">
+                            <ul class="navbar-nav me-auto mb-1 menuMobile">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="#">Inicio</a>
                             </li>
@@ -62,7 +66,10 @@
                                 </ul>
                             </li>
                             </ul>
-                            <img src="img/logoCocinaNuevoo.png"  class = " rounded float-start img-logo me-lg-3 mt-lg-1 " alt="Logo Inicio ">
+                            <div class=" imgMenuMobile">
+
+                              <img src="/img/logoCocinaNuevoo.png"  class = "  rounded float-start img-logo me-lg-3 mt-lg-1" alt="Logo Inicio ">
+                          </div>
                       </div>
                     </div>
                   </nav>
@@ -124,7 +131,7 @@
         
     
       </main>
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1">
+        <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-3 my-4 border-top mt-5   bg-dark bg-gradient p-1">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
