CEO + subida al servidor

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactanos para reservar una mesa, para un presupuesto de un evento o para inscribirte en nuestros cursos">
+    <meta name="keywords" content="Contactos, Presupuesto, Reservar una mesa, Inscripciones a Cursos, otros Comentarios, Informacion, Conocer Mas">
+    <link rel="icon" type="Logo-Cocina-de-Autor" href="../img/logoCocinaNuevoo.png"/> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -141,8 +144,8 @@
       </div>
       <div class="row">
         <div class="col-12 col-lg-12 d-flex justify-content-center mt-5 mb-4 flex-wrap">
-          <img src="../img/imagenparaContactoss.png" class="imgContacto"  alt="">
-          <img src="../img/foncocontactos2.jpg" class="imgContacto"  alt="">
+          <img src="../img/imagenparaContactoss.png" class="imgContacto"  alt="Restaurante-Cocina-de-Autor1">
+          <img src="../img/foncocontactos2.jpg" class="imgContacto"  alt="Restaurante-Cocina-de-Autor2">
           </div>
       </div>
       </main>
