--- a/Pages/platos.html
+++ b/Pages/platos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Una nueva forma de explorar, pensar y disfrutar el mundo de la gastronomia, la Cocina de Autor ">
-    <meta name="keywords" content="Cocina de Autor, Platos, Cursos, Que es, Informacion, Comida, Alta Cocina, Cocina Tradicional, Postres">
+    <meta name="description" content="Platos con alimentos tipicos creados con una nuevo paradigma, son las bases de la Cocina de Autor">
+    <meta name="keywords" content="Alta Cocina, Cocina Tradicional, Postres, Comida Española, Comida Turca, Comida Japonesa, Comida Rusa, Carnes ">
     <link rel="icon" type="Logo-Cocina-de-Autor" href="../img/logoCocinaNuevoo.png"/> 
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -88,25 +88,25 @@
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/01 Costillas-de-cerdo-al-caramelo-880x587.jpg" class="card-img-top" alt="...">
+              <img src="../img/01 Costillas-de-cerdo-al-caramelo-880x587.jpg" class="card-img-top" alt="COSTILLAS-DE-CERDO-GLASEADAS">
               <div class="card-body">
                 <p class="card-text">COSTILLAS DE CERDO GLASEADAS CON MIEL</p>
               </div>
             </div>
             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/02 Dorada al horno con papas y limón.jpg" class="card-img-top" alt="...">
+              <img src="../img/02 Dorada al horno con papas y limón.jpg" class="card-img-top" alt="DORADO-A-LA-SAL">
               <div class="card-body">
                 <p class="card-text">DORADO A LA SAL CON PAPAS Y LIMON</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/03 SALOMN AL HORNO CON BONIATO.jpg" class="card-img-top" alt="...">
+              <img src="../img/03 SALOMN AL HORNO CON BONIATO.jpg" class="card-img-top" alt="SALMÓN-CON-BONIATO">
               <div class="card-body">
                 <p class="card-text">SALMÓN CON BONIATO Y PAPAS ASADAS</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/04 BIFE DE CHORIZO CON SALSA DE ZANAHORIA.jpg" class="card-img-top" alt="...">
+              <img src="../img/04 BIFE DE CHORIZO CON SALSA DE ZANAHORIA.jpg" class="card-img-top" alt="BIFE-DE-CHORIZO">
               <div class="card-body">
                 <p class="card-text">BIFE DE CHORIZO CON SALSA DE ZANAHORIA</p>
               </div>
@@ -119,25 +119,25 @@
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/09 Tradicional ESPAÑA Pulpo a la Gallega.jpg" class="card-img-top " alt="...">
+              <img src="../img/09 Tradicional ESPAÑA Pulpo a la Gallega.jpg" class="card-img-top " alt="PULPO-A-LA-GALLEGA">
               <div class="card-body">
                 <p class="card-text">ESPAÑA: PULPO A LA GALLEGA</p>
               </div>
             </div>
             <div class="card mb-2 imagenPlatos" style="width: 22rem; ">
-              <img src="../img/10Tradicional Rusa Pilmeni.jpeg" class="card-img-top" alt="...">
+              <img src="../img/10Tradicional Rusa Pilmeni.jpeg" class="card-img-top" alt="Plato-PILMENI">
               <div class="card-body">
                 <p class="card-text">RUSIA: PILMENI</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/11  Tradicional Dolma Turquia.jpg" class="card-img-top" alt="...">
+              <img src="../img/11  Tradicional Dolma Turquia.jpg" class="card-img-top" alt="Plato-DOLMA">
               <div class="card-body">
                 <p class="card-text">TURQUIA: DOLMA</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/12 tradicionlan Japon Ramen.jpg" class="card-img-top" alt="...">
+              <img src="../img/12 tradicionlan Japon Ramen.jpg" class="card-img-top" alt="Plato-RAMEN">
               <div class="card-body">
                 <p class="card-text">JAPON: RAMEN</p>
               </div>
@@ -150,25 +150,25 @@
         <div class="row ">
           <div class="col-12 col-lg-12 d-flex justify-content-evenly flex-wrap " >
             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/05 coulant-de-chocolate-frio.jpg" class="card-img-top " alt="...">
+              <img src="../img/05 coulant-de-chocolate-frio.jpg" class="card-img-top " alt="COULANT-DE-CHOCOLATE">
               <div class="card-body">
                 <p class="card-text">COULANT DE CHOCOLATE FRÍO</p>
               </div>
             </div>
             <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top " alt="...">
+              <img src="../img/06 CHEESECAKE COCIDO.jpg" class="card-img-top " alt="CHEESECAKE-COCIDO">
               <div class="card-body">
                 <p class="card-text">CHEESECAKE COCIDO</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem; ">
-              <img src="../img/07  Lemon Pie.webp" class="card-img-top" alt="...">
+              <img src="../img/07  Lemon Pie.webp" class="card-img-top" alt="LEMON-PIE">
               <div class="card-body">
                 <p class="card-text">LEMON PIE</p>
               </div>
             </div>
              <div class="card mb-2 imagenPlatos" style="width: 22rem;">
-              <img src="../img/08 FLAN DE VEINTE YEMAS.jpg " class="card-img-top" alt="...">
+              <img src="../img/08 FLAN DE VEINTE YEMAS.jpg " class="card-img-top" alt="FLAN-DE-VEINTE-YEMAS">
               <div class="card-body">
                 <p class="card-text">FLAN DE VEINTE YEMAS</p>
               </div>
