--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/imagen-central3.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/imagen-central3.jpg" class="d-block w-100" alt="imagen-Cocina-de-Autor1">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/imagen-central6.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/imagen-central6.jpg" class="d-block w-100" alt="imagen-Cocina-de-Autor2">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/imagen-central2.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/imagen-central2.jpg" class="d-block w-100" alt="imagen-Cocina-de-Autor3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
