--- a/Pages/informacion.html
+++ b/Pages/informacion.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="De donde se origina la Cocina de Autor para coonocer lo que hoy son sus caracteristicas y tecnicas">
+    <meta name="keywords" content=" Origen de la Cocina de Autor, Información, Características, Tecnicas, Creatividad, Gastronomia, sabores  ">
+    <link rel="icon" type="Logo-Cocina-de-Autor" href="../img/logoCocinaNuevoo.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
